vhdl_syntax/src/parser/productions/snapshots/vhdl_syntax__parser__productions__concurrent_statement__tests__concurrent_conditional_signal_assignment.snap
---
source: vhdl_syntax/src/parser/productions/concurrent_statement.rs
expression: "stmt_to_test_text(\"foo <= a when sel else b;\",)"
---
ConcurrentConditionalSignalAssignment
  NameTarget
    Name
      NameDesignatorPrefix
        Identifier 'foo'
  LTE
  ConditionalWaveforms
    WhenWaveform
      WaveformElements
        WaveformElement
          NameExpression
            Name
              NameDesignatorPrefix
                Identifier 'a'
      Keyword(When)
      NameExpression
        Name
          NameDesignatorPrefix
            Identifier 'sel'
    ElseWaveform
      Keyword(Else)
      WaveformElements
        WaveformElement
          NameExpression
            Name
              NameDesignatorPrefix
                Identifier 'b'
  SemiColon
