vhdl_syntax/src/parser/productions/snapshots/vhdl_syntax__parser__productions__concurrent_statement__tests__concurrent_procedure_no_args.snap
---
source: vhdl_syntax/src/parser/productions/concurrent_statement.rs
expression: "stmt_to_test_text(\"foo;\",)"
---
ConcurrentProcedureCallOrComponentInstantiationStatement
  Name
    NameDesignatorPrefix
      Identifier 'foo'
  SemiColon
