vhdl_syntax/src/parser/productions/snapshots/vhdl_syntax__parser__productions__concurrent_statement__tests__concurrent_signal_assignment.snap
---
source: vhdl_syntax/src/parser/productions/concurrent_statement.rs
expression: "stmt_to_test_text(\"foo <= bar(2 to 3);\",)"
---
ConcurrentSimpleSignalAssignment
  NameTarget
    Name
      Identifier 'foo'
  LTE
  WaveformElements
    WaveformElement
      NameExpression
        Name
          Identifier 'bar'
          ParenthesizedName
            LeftPar
            AssociationList
              AssociationElement
                ActualPart
                  ActualPartExpression
                    BinaryExpression
                      LiteralExpression
                        AbstractLiteral '2'
                      Keyword(To)
                      LiteralExpression
                        AbstractLiteral '3'
            RightPar
  SemiColon
