vhdl_syntax/src/parser/productions/snapshots/vhdl_syntax__parser__productions__concurrent_statement__tests__concurrent_signal_assignment_external_name.snap
---
source: vhdl_syntax/src/parser/productions/concurrent_statement.rs
expression: "stmt_to_test_text(\"<< signal dut.foo : std_logic >> <= bar(2 to 3);\",)"
---
ConcurrentSimpleSignalAssignment
  NameTarget
    Name
      ExternalSignalName
        LtLt
        Keyword(Signal)
        RelativePathname
          PartialPathname
            PathnameElement
              Identifier 'dut'
            Dot
            PathnameElement
              Identifier 'foo'
        Colon
        SubtypeIndication
          Name
            NameDesignatorPrefix
              Identifier 'std_logic'
        GtGt
  LTE
  WaveformElements
    WaveformElement
      NameExpression
        Name
          NameDesignatorPrefix
            Identifier 'bar'
          ParenthesizedName
            LeftPar
            AssociationList
              AssociationElement
                ActualPart
                  ActualPartExpression
                    BinaryExpression
                      LiteralExpression
                        AbstractLiteral '2'
                      Keyword(To)
                      LiteralExpression
                        AbstractLiteral '3'
            RightPar
  SemiColon
