vhdl_syntax/src/parser/productions/snapshots/vhdl_syntax__parser__productions__concurrent_statement__tests__configuration_instantiation.snap
---
source: vhdl_syntax/src/parser/productions/concurrent_statement.rs
expression: "stmt_to_test_text(\"inst: configuration lib.foo.bar;\",)"
---
ComponentInstantiationStatement
  StmtLabel
    Identifier 'inst'
    Colon
  InstantiatedConfiguration
    Keyword(Configuration)
    Name
      NameDesignatorPrefix
        Identifier 'lib'
      SelectedName
        Dot
        Identifier 'foo'
      SelectedName
        Dot
        Identifier 'bar'
  SemiColon
