vhdl_syntax/src/parser/productions/snapshots/vhdl_syntax__parser__productions__concurrent_statement__tests__empty_case_generate.snap
---
source: vhdl_syntax/src/parser/productions/concurrent_statement.rs
expression: "$crate :: parser :: test_utils :: render_recovery(code, & tree, & diags)"
---
== source ==
gen: case expr(0) + 2 generate
end generate;

== tree ==
CaseGenerateStatement
  StmtLabel
    Identifier 'gen'
    Colon
  CaseGeneratePreamble
    Keyword(Case)
    BinaryExpression
      NameExpression
        Name
          NameDesignatorPrefix
            Identifier 'expr'
          ParenthesizedName
            LeftPar
            AssociationList
              AssociationElement
                ActualPart
                  ActualPartExpression
                    LiteralExpression
                      AbstractLiteral '0'
            RightPar
      Plus
      LiteralExpression
        AbstractLiteral '2'
    Keyword(Generate)
  GenerateEpilogue
    Keyword(End)
    Keyword(Generate)
    SemiColon

== diagnostics ==
1:31 expected CaseGenerateAlternative
