vhdl_syntax/src/parser/productions/snapshots/vhdl_syntax__parser__productions__concurrent_statement__tests__entity_instantiation.snap
---
source: vhdl_syntax/src/parser/productions/concurrent_statement.rs
expression: "stmt_to_test_text(\"inst: entity lib.foo.bar;\",)"
---
ComponentInstantiationStatement
  Label
    Identifier 'inst'
    Colon
  InstantiatedEntity
    Keyword(Entity)
    Name
      NameDesignatorPrefix
        Identifier 'lib'
      SelectedName
        Dot
        Identifier 'foo'
      SelectedName
        Dot
        Identifier 'bar'
  SemiColon
